Fix rats never getting items